k8s/ezbookkeeping-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ezbookkeeping
  namespace: ezbookkeeping

spec:
  type: NodePort

  selector:
    app: ezbookkeeping

  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
