k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ezbookkeeping-ingress
  namespace: ezbookkeeping

spec:
  ingressClassName: nginx

  rules:
  - host: ezbookkeeping.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ezbookkeeping
            port:
              number: 8080
